--- a/views/labeldesigner.jinja2
+++ b/views/labeldesigner.jinja2
@@ -1,6 +1,6 @@
 {% extends "base.jinja2" %}
 
-{% block page_title %}{{ title }}{% endblock %}
+<!--{% block page_title %}{{ title }}{% endblock %}-->
 
 {% block jumbotron %}
   <h1>{{ website['PAGE_TITLE'] }}</h1>
@@ -129,6 +129,23 @@
         </div>
       </div>
     </div>
+
+
+    <div class="col-md-12">
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <h3 class="panel-title"><span class="glyphicon glyphicon-bell" aria-hidden="true"
+              style="margin-right: 0.3em"></span> Midori Orders</h3>
+        </div>
+        <div id="labelPanel" class="panel-body">
+          {% for key,value in labels_midori.iterrows() %}
+          <option value="{{ key }}">{{ value['Order'][0] }}</option>
+          {% endfor %}
+        </div>
+      </div>
+    </div>
+  
+
   </div>
 {% endblock %}
 
